# rfd-api

./: .editorconfig  .gitignore  .licenserc.yaml  CHANGELOG.adoc  CLAUDE_CODE_SKILL.md  Cargo.toml  Containerfile  Containerfile.local  README.md  RELEASE.md  SETUP.md  compose.yml  dist-workspace.toml  dprint.json  licenserc.yaml  rfd-api-spec.json  rust-toolchain.toml
.cargo/: config.toml
.claude/skills/rfd-api/: SKILL.md
.github/: renovate.json
.github/workflows/: build.yml  fmt.yml  license-check.yml  lint.yml  release-api.yml  release.yml  test.yml
dropshot-authorization-header/: Cargo.toml
dropshot-authorization-header/src/: basic.rs  bearer.rs  lib.rs
parse-rfd/: .gitignore  Cargo.toml
parse-rfd/parser/: index.js  package-lock.json  package.json
parse-rfd/src/: lib.rs
remix-auth-rfd/: package-lock.json  package.json
remix-auth-rfd/src/: index.ts  magic-link.ts  oauth.ts  util.ts
rfd-api/: Cargo.toml  config.example.toml  mappers.example.toml  spec.example.toml
rfd-api/src/: caller.rs  config.rs  context.rs  email_validator.rs  error.rs  initial_data.rs  magic_link.rs  main.rs  mapper.rs  permissions.rs  search.rs  secrets.rs  seed.rs  server.rs  token.rs  util.rs
rfd-api/src/authn/: jwt.rs  key.rs  mod.rs
rfd-api/src/endpoints/: api_user.rs  api_user_provider.rs  group.rs  groups.rs  init.rs  job.rs  mappers.rs  meta.rs  mod.rs  rfd.rs  webhook.rs
rfd-api/src/endpoints/login/: mod.rs
rfd-api/src/endpoints/login/access_token/: github.rs  mod.rs
rfd-api/src/endpoints/login/jwt/: google.rs  mod.rs
rfd-api/src/endpoints/login/local/: mod.rs
rfd-api/src/endpoints/login/oauth/: authz_code.rs  client.rs  code.rs  device_token.rs  github.rs  google.rs  mod.rs
rfd-api/src/endpoints/well_known/: mod.rs
rfd-api/src/mapper/: default.rs  email_address.rs  email_domain.rs  github_username.rs  mod.rs
rfd-cli/: .gitignore  Cargo.toml  build.rs
rfd-cli/src/: client.rs  err.rs  main.rs  printer.rs
rfd-cli/src/auth/: link.rs  login.rs  mod.rs  oauth.rs
rfd-cli/src/cmd/: mod.rs
rfd-cli/src/cmd/auth/: link.rs  login.rs  mod.rs  oauth.rs
rfd-cli/src/cmd/config/: mod.rs
rfd-cli/src/cmd/shortcut/: access.rs  mapper.rs  mod.rs
rfd-cli/src/printer/: json.rs  mod.rs  tab.rs
rfd-cli/src/store/: mod.rs
rfd-cli/tests/: dispatch_coverage.rs
rfd-data/: Cargo.toml
rfd-data/src/: lib.rs
rfd-data/src/content/: asciidoc.rs  markdown.rs  mod.rs  template.rs
rfd-github/: Cargo.toml
rfd-github/src/: ext.rs  lib.rs  util.rs
rfd-installer/: Cargo.toml  build.rs
rfd-installer/src/: lib.rs  main.rs
rfd-kube-init/: Cargo.toml  README.md
rfd-kube-init/src/: kube.rs  main.rs  meilisearch.rs  meilisearch_client.rs  oauth_init.rs
rfd-model/: Cargo.toml  diesel-schema.patch  diesel.toml
rfd-model/migrations/2023-01-03-032421_api_user/: down.sql  up.sql
rfd-model/migrations/2023-01-10-172130_api_user_access_token/: down.sql  up.sql
rfd-model/migrations/2023-01-20-202736_rfd/: down.sql  up.sql
rfd-model/migrations/2023-01-20-203139_rfd_revision/: down.sql  up.sql
rfd-model/migrations/2023-01-20-204405_rfd_pdf/: down.sql  up.sql
rfd-model/migrations/2023-07-23-145951_job/: up.sql
rfd-model/migrations/2023-09-06-193013_login_attempt/: down.sql  up.sql
rfd-model/migrations/2023-09-08-154400_oauth_client/: down.sql  up.sql
rfd-model/migrations/2023-09-28-151800_access_group/: down.sql  up.sql
rfd-model/migrations/2023-09-29-200104_add_mappers/: down.sql  up.sql
rfd-model/migrations/2023-10-02-200138_add_request_scope/: down.sql  up.sql
rfd-model/migrations/2023-10-06-001455_add_rfd_visibility/: down.sql  up.sql
rfd-model/migrations/2023-10-06-181732_link_request/: down.sql  up.sql
rfd-model/migrations/2023-11-01-171512_add_pdf_external_id/: down.sql  up.sql
rfd-model/migrations/2023-11-02-161428_lock_job/: down.sql  up.sql
rfd-model/migrations/2024-01-12-223651_all_null_token_permissions/: down.sql  up.sql
rfd-model/migrations/2024-02-14-042831_add_display_name/: down.sql  up.sql
rfd-model/migrations/2024-02-28_add_labels_to_rfd_revision/: down.sql  up.sql
rfd-model/migrations/2024-04-12-205749_fix_revision_index/: down.sql  up.sql
rfd-model/migrations/2024-04-19-173349_add_jobs_started_index/: down.sql  up.sql
rfd-model/migrations/2024-11-12-141610_v_api_conversion/: down.sql  up.sql
rfd-model/migrations/2024-11-25-175556_fix-revision-idx/: down.sql  up.sql
rfd-model/migrations/2024-12-21-204322_add_rfd_comments/: up.sql
rfd-model/migrations/2025-01-02-190923_add_commited_at_index/: down.sql  up.sql
rfd-model/migrations/2025-08-14-162335_rfd_revision_major_change/: down.sql  up.sql
rfd-model/migrations/2026-02-18_initialization/: down.sql  up.sql
rfd-model/src/: db.rs  lib.rs  permissions.rs  schema.rs  schema_ext.rs
rfd-model/src/storage/: mock.rs  mod.rs  postgres.rs
rfd-model/tests/: postgres.rs
rfd-processor/: Cargo.toml  config.example.toml
rfd-processor/src/: context.rs  features.rs  main.rs  pdf.rs  processor.rs  rfd.rs  scanner.rs  util.rs
rfd-processor/src/content/: asciidoc.rs  markdown.rs  mod.rs
rfd-processor/src/github/: ext.rs  mod.rs
rfd-processor/src/search/: mod.rs
rfd-processor/src/updater/: copy_images_to_storage.rs  create_pull_request.rs  ensure_default_state.rs  ensure_pr_state.rs  mod.rs  process_includes.rs  update_discussion_url.rs  update_pdfs.rs  update_pull_request.rs  update_search_index.rs
rfd-redirect/: Cargo.toml
rfd-redirect/src/: config.rs  context.rs  endpoints.rs  main.rs  server.rs
rfd-sdk/: Cargo.toml
rfd-sdk/src/: lib.rs
rfd-secret/: Cargo.toml
rfd-secret/src/: lib.rs
rfd-ts/: README.md  package-lock.json  package.json  tsconfig.json
rfd-ts/src/: Api.ts  http-client.ts  retry.ts  util.ts  validate.ts
slog-tracing-bridge/: Cargo.toml
slog-tracing-bridge/src/: lib.rs
trace-request/: Cargo.toml
trace-request/src/: lib.rs
trace-request/tests/: test.rs
w-api-permissions/: Cargo.toml
w-api-permissions/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
