[workspace]
members = [
  "dropshot-authorization-header",
  "parse-rfd",
  "rfd-api",
  "rfd-cli",
  "rfd-data",
  "rfd-github",
  "rfd-model",
  "rfd-processor",
  "rfd-sdk",
  "trace-request",
  "w-api-permissions",
  "xtask"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
async-bb8-diesel = { git = "https://github.com/oxidecomputer/async-bb8-diesel" }
async-trait = "0.1.81"
base64 = "0.22"
bb8 = "0.8.5"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "string", "env"] }
config = { version = "0.14.0", features = ["toml"] }
cookie = { version = "0.18.1" }
crc32c = "0.6.8"
diesel = { version = "2.2.2", features = ["postgres"] }
dirs = "5.0.1"
dropshot = "0.10.1"
dropshot-verified-body = { git = "https://github.com/oxidecomputer/dropshot-verified-body" }
futures = "0.3.30"
google-cloudkms1 = "5.0.4"
google-drive3 = "5.0.4"
google-storage1 = "5.0.4"
hex = "0.4.3"
hmac = "0.12.1"
http = "0.2.12"
hyper = "0.14.30"
hyper-rustls = "0.27.3"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
meilisearch-sdk = { version = "0.24.3", default-features = false, features = ["reqwest-rustls"] }
md-5 = "0.10.6"
mime_guess = "2.0.5"
mockall = "0.13.0"
newline-converter = "0.3.0"
oauth2 = "4.4.2"
octorust = { git = "https://github.com/oxidecomputer/third-party-api-clients", branch = "handle-cache-miss" }
owo-colors = "4.0.0"
partial-struct = { git = "https://github.com/oxidecomputer/partial-struct" }
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
rand = "0.8.5"
rand_core = "0.6"
regex = "1.10.6"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.3.0"
reqwest-tracing = "0.4.6"
ring = "0.17.8"
rsa = "0.9.6"
rustfmt-wrapper = "0.2.1"
schemars = "0.8.21"
secrecy = "0.8.0"
semver = "1.0.23"
serde = "1"
serde_bytes = "0.11.15"
serde_json = "1"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
similar = "2.6.0"
slog = "2.7.0"
slog-async = "2.8.0"
tabwriter = "1.4.0"
tap = "1.0.1"
textwrap = "0.16.1"
thiserror = "1.0.63"
tokio = "1.39.3"
toml = "0.8.19"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.9"
tracing-core = "0.1.32"
tracing-slog = { git = "https://github.com/oxidecomputer/tracing-slog" }
tracing-subscriber = "0.3.18"
uuid = "1.10.0"
valuable = "0.1.0"
yup-oauth2 = "8.3.2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.12.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "skip"

[patch.crates-io]
meilisearch-sdk = { git = "https://github.com/gibbz00/meilisearch-rust.git", branch = "request_clients" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
