[workspace]
members = [
  "dropshot-authorization-header",
  "parse-rfd",
  "rfd-api",
  "rfd-cli",
  "rfd-data",
  "rfd-github",
  "rfd-installer",
  "rfd-model",
  "rfd-processor",
  "rfd-sdk",
  "trace-request",
  "xtask"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.94"
async-bb8-diesel = { git = "https://github.com/oxidecomputer/async-bb8-diesel" }
async-trait = "0.1.83"
base64 = "0.22"
bb8 = "0.8.6"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive", "string", "env"] }
config = { version = "0.15.4", features = ["toml"] }
cookie = { version = "0.18.1" }
crc32c = "0.6.8"
diesel = { version = "2.2.6", features = ["postgres"] }
diesel_migrations = { version = "2.2.0" }
dirs = "5.0.1"
dropshot = "0.15"
dropshot-verified-body = { git = "https://github.com/oxidecomputer/dropshot-verified-body" }
futures = "0.3.31"
google-drive3 = "6"
google-storage1 = "6"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.2.0"
hyper = "1.5.2"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
meilisearch-sdk = "0.27.1"
md-5 = "0.10.6"
mime_guess = "2.0.5"
mockall = "0.13.1"
newline-converter = "0.3.0"
newtype-uuid = { version = "1.1.3", features = ["schemars08", "serde", "v4"] }
oauth2 = { version = "4.4.2", default-features = false, features = ["rustls-tls"] }
octorust = "0.9.0"
owo-colors = "4.1.0"
partial-struct = { git = "https://github.com/oxidecomputer/partial-struct" }
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
rand = "0.8.5"
rand_core = "0.6"
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
reqwest-tracing = "0.5"
ring = "0.17.8"
rsa = "0.9.7"
rustfmt-wrapper = "0.2.1"
schemars = "0.8.21"
secrecy = "0.10.3"
semver = "1.0.24"
serde = "1"
serde_bytes = "0.11.15"
serde_json = "1"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
similar = "2.6.0"
slog = "2.7.0"
slog-async = "2.8.0"
tabwriter = "1.4.0"
tap = "1.0.1"
textwrap = "0.16.1"
thiserror = "2"
tokio = "1.42.0"
toml = "0.8.19"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-slog = { git = "https://github.com/oxidecomputer/tracing-slog", default-features = false }
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["serde"] }
valuable = "0.1.0"
v-api = { git = "https://github.com/oxidecomputer/v-api" }
v-api-installer = { git = "https://github.com/oxidecomputer/v-api" }
v-model = { git = "https://github.com/oxidecomputer/v-api" }
v-api-permission-derive = { git = "https://github.com/oxidecomputer/v-api" }
yup-oauth2 = { version = "11.0.0" }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.12.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "skip"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
