[workspace]
members = [
  "parse-rfd",
  "rfd-api",
  "rfd-cli",
  "rfd-data",
  "rfd-github",
  "rfd-installer",
  "rfd-model",
  "rfd-processor",
  "rfd-sdk",
  "rfd-secret",
  "trace-request",
  "xtask"
]
exclude = ["rfd-kube-init"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
async-bb8-diesel = { git = "https://github.com/oxidecomputer/async-bb8-diesel", version = "0.3" }
async-trait = "0.1.89"
aws-config = "1.8.13"
aws-sdk-s3 = "1.99.0"
base64 = "0.22"
bb8 = "0.9"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive", "string", "env"] }
config = { version = "0.15.19", features = ["toml"] }
cookie = { version = "0.18.1" }
crc32c = "0.6.8"
diesel = { version = "2.3.5", features = ["postgres"] }
diesel_migrations = { version = "2.3.1" }
dirs = "6.0.0"
dropshot = "0.16"
dropshot-authorization-header = { git = "https://github.com/oxidecomputer/v-api" }
dropshot-verified-body = { git = "https://github.com/oxidecomputer/dropshot-verified-body" }
futures = "0.3.31"
google-drive3 = "7.0.0"
google-storage1 = "7.0.0"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.4.0"
hyper = "1.8.1"
itertools = "0.13.0"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
meilisearch-sdk = "0.32.0"
k8s-openapi = { version = "0.27", features = ["v1_32"] }
md-5 = "0.10.6"
mime_guess = "2.0.5"
minijinja = { version = "2.14", features = ["loader"] }
mockall = "0.14"
newline-converter = "0.3.0"
newtype-uuid = { version = "1.3.2", features = ["schemars08", "serde", "v4"] }
oauth2 = { version = "5.0.0", default-features = false, features = ["rustls-tls"] }
octorust = "0.10.0"
owo-colors = "4.2.3"
partial-struct = { git = "https://github.com/oxidecomputer/partial-struct" }
progenitor = { version = "0.11.2" }
progenitor-client = { version = "0.11.2" }
rand = "0.8.5"
rand_core = "0.6"
regex = "1.12.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
reqwest-tracing = "0.5"
resend-rs = { version = "0.15.0", default-features = false, features = ["rustls-tls"] }
ring = "0.17.14"
rsa = "0.9.10"
rustfmt-wrapper = "0.2.1"
schemars = "0.8.22"
secrecy = "0.10.3"
semver = "1.0"
serde = "1"
serde_bytes = "0.11"
serde_json = "1"
serde_urlencoded = "0.7"
sha2 = "0.10.9"
similar = "2.7.0"
slog = "2.8.2"
slog-async = "2.8.0"
tabwriter = "1.4.1"
tap = "1.0.1"
tempfile = "3"
textwrap = "0.16.2"
thiserror = "2"
tokio = { version = "1.49.0", default-features = false, features = ["rt-multi-thread", "macros"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-slog = { git = "https://github.com/oxidecomputer/tracing-slog", default-features = false }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
valuable = "0.1.1"
v-api = { git = "https://github.com/oxidecomputer/v-api" }
v-api-installer = { git = "https://github.com/oxidecomputer/v-api" }
v-model = { git = "https://github.com/oxidecomputer/v-api" }
v-api-permission-derive = { git = "https://github.com/oxidecomputer/v-api" }
yup-oauth2 = { version = "12.1.2" }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.12.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "skip"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# [patch."https://github.com/oxidecomputer/v-api"]
# dropshot-authorization-header = { path = "../v-api/dropshot-authorization-header" }
# v-api = { path = "../v-api/v-api" }
# v-api-installer = { path = "../v-api/v-api-installer" }
# v-model = { path = "../v-api/v-model" }
# v-api-permission-derive = { path = "../v-api/v-api-permission-derive" }

[profile.release]
debug = 1