[package]
name = "dropshot-authorization-header"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
dropshot = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
