[package]
name = "rfd-api"
version = "0.11.0"
edition = "2021"
repository = "https://github.com/oxidecomputer/rfd-api"

[features]
local-dev = ["v-api/local-dev"]

[dependencies]
anyhow = { workspace = true }
async-bb8-diesel = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bb8 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
config = { workspace = true }
cookie = { workspace = true }
crc32c = { workspace = true }
diesel = { workspace = true }
dropshot = { workspace = true }
dropshot-authorization-header = { path = "../dropshot-authorization-header" }
dropshot-verified-body = { workspace = true, features = ["github"] }
hex = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
jsonwebtoken = { workspace = true }
meilisearch-sdk = { workspace = true }
minijinja = { workspace = true }
newtype-uuid = { workspace = true }
oauth2 = { workspace = true }
octorust = { workspace = true, features = ["httpcache"] }
partial-struct = { workspace = true }
rand = { workspace = true, features = ["std"] }
rand_core = { workspace = true, features = ["std"] }
regex = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
reqwest-tracing = { workspace = true }
resend-rs = { workspace = true }
ring = { workspace = true }
rfd-data = { path = "../rfd-data" }
rfd-github = { path = "../rfd-github" }
rfd-model = { path = "../rfd-model" }
rsa = { workspace = true, features = ["sha2"] }
schemars = { workspace = true, features = ["chrono"] }
secrecy = { workspace = true, features = ["serde"] }
semver = { workspace = true }
sendgrid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
sha2 = { workspace = true }
slog = { workspace = true }
slog-async = { workspace = true }
tap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
toml = { workspace = true }
trace-request = { path = "../trace-request" }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-slog = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
uuid = { workspace = true, features = ["v4", "serde"]  }
v-api = { workspace = true }
v-model = { workspace = true }
v-api-permission-derive = { workspace = true }
yup-oauth2 = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
mockall = { workspace = true }
rfd-model = { path = "../rfd-model", features = ["mock"] }
rsa = { workspace = true, features = ["pem"] }

[package.metadata.dist]
targets = ["x86_64-unknown-linux-gnu"]
