[package]
name = "rfd-cli"
version = "0.13.1"
edition = "2021"

[features]
local-dev = []

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }
owo-colors = { workspace = true }
progenitor-client = { workspace = true }
reqwest = { workspace = true }
rfd-sdk = { path = "../rfd-sdk" }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tabwriter = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
toml = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

[package.metadata.dist]
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin"]
