[package]
name = "rfd-processor"
version = "0.0.0-alpha.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
google-drive = { workspace = true }
google-storage1 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
http = { workspace = true }
meilisearch-sdk = { workspace = true }
md-5 = { workspace = true }
mime_guess = { workspace = true }
octorust = { workspace = true, features = ["httpcache"] }
parse-rfd = { path = "../parse-rfd" }
regex = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
reqwest-tracing = { workspace = true }
rfd-data = { path = "../rfd-data" }
rfd-model = { path = "../rfd-model" }
rsa = { workspace = true }
serde = { workspace = true }
tap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
uuid = { workspace = true }
yup-oauth2 = { workspace = true }

[package.metadata.dist]
targets = ["x86_64-unknown-linux-gnu"]
