[package]
name = "rfd-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true, features = ["serde"] }
progenitor-client = { workspace = true }
schemars = { workspace = true, features = ["chrono", "uuid1"] }
serde = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }